--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -40,11 +40,13 @@
 
         <Button
             android:id="@+id/btn_next"
-            style="@style/ButtonStyle"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/_140sdp"
             android:layout_height="@dimen/_36sdp"
             android:maxLines="1"
             android:textSize="@dimen/_14ssp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/button_blue"
+            android:textColor="@android:color/white"
             android:text="NEXT" />
 
     </LinearLayout>
