--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,8 @@
     <color name="colorPrimaryDark">@color/brand_color_dark</color>
     <color name="colorAccent">@color/brand_color</color>
 
-    <color name="brand_color_dark">#21843E</color>
-    <color name="brand_color">#209A47</color>
+    <color name="brand_color_dark">#2196F3</color>
+    <color name="brand_color">#03A9F4</color>
     <color name="brand_color_red">#B61414</color>
     <color name="brand_color_light">#BEBEBE</color>
 
@@ -29,7 +29,7 @@
 
     <color name="gray_shadow">#99000000</color>
     <color name="black">#000000</color>
-    <color name="red">#985E52</color>
+    <color name="red">#BF3429</color>
     <color name="gray">#AAAAAA</color>
     <color name="lightGray">#D3D3D3</color>
     <color name="lightGray2">#E0E0E0</color>
