--- a/app/src/main/res/drawable/shadow.xml
+++ b/app/src/main/res/drawable/shadow.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/shadow_2" />
+    <item
+        >
+        <shape android:shape="rectangle">
 
-</selector>
+            <solid android:color="@android:color/white" />
+        </shape>
+    </item>
+</layer-list>
