--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cont_temp_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="@dimen/_10sdp"
-    android:layout_marginRight="@dimen/_10sdp"
-    android:background="@drawable/running_man"
-    android:id="@+id/cont_temp_fragment">
+    android:layout_marginStart="@dimen/_3sdp"
+    android:background="@drawable/running_man">
 
     <TextView
         android:id="@+id/labelText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/_20sdp"
+        android:gravity="center_horizontal"
         android:text="@string/label_stats"
         android:textColor="@color/gray"
-        android:textSize="@dimen/_40ssp" />
-
-
+        android:textSize="@dimen/_40ssp"
+        android:background="@drawable/shadow"
+        android:visibility="visible" />
 
 </FrameLayout>
