--- a/app/src/main/res/layout/fragment_stock.xml
+++ b/app/src/main/res/layout/fragment_stock.xml
@@ -3,19 +3,19 @@
     android:id="@+id/cont_temp_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="@dimen/_10sdp"
-    android:layout_marginRight="@dimen/_10sdp"
+    android:layout_marginStart="@dimen/_3sdp"
     android:background="@drawable/running_man">
 
     <TextView
         android:id="@+id/labelText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/_20sdp"
+        android:gravity="center_horizontal"
         android:text="@string/label_stock"
         android:textColor="@color/gray"
-        android:textSize="@dimen/_40ssp" />
-
+        android:textSize="@dimen/_40ssp"
+        android:background="@drawable/shadow"
+        android:visibility="visible" />
 
 </FrameLayout>
