--- a/app/src/main/res/layout/dialog_input_list.xml
+++ b/app/src/main/res/layout/dialog_input_list.xml
@@ -9,17 +9,18 @@
 
     <TextView
         android:id="@+id/dialogListLabel"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
-        android:textSize="@dimen/_20ssp" />
+        android:layout_gravity="center_horizontal"
+        android:textSize="@dimen/_14ssp" />
 
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_200sdp"
+        android:layout_height="@dimen/_160sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:visibility="gone"/>
 
@@ -27,7 +28,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_4sdp"
-        android:layout_marginBottom="@dimen/_20sdp"
         android:orientation="horizontal">
 
         <EditText
@@ -41,7 +41,7 @@
             android:inputType="text"
             android:maxLength="50"
             android:maxLines="1"
-            android:textSize="@dimen/_16ssp" />
+            android:textSize="@dimen/_14ssp" />
 
         <ImageView
             android:id="@+id/btnFind"
