--- a/app/src/main/res/layout/dialog_ivestment.xml
+++ b/app/src/main/res/layout/dialog_ivestment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cont"
     android:layout_width="match_parent"
@@ -8,80 +8,190 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/dialogListLabel"
+        android:id="@+id/investLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:textSize="@dimen/_20ssp" />
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginTop="@dimen/_3sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_toStartOf="@+id/profitMarker"
+        android:text="Investment"
+        android:textColor="@color/brand_color_dark"
+        android:textSize="@dimen/_14ssp"
+        android:visibility="visible" />
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_200sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:visibility="gone"/>
-
-    <RelativeLayout
+    <TextView
+        android:id="@+id/typeLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_4sdp"
-        android:layout_marginBottom="@dimen/_20sdp"
-        android:orientation="horizontal">
+        android:layout_below="@+id/investLabel"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_toStartOf="@+id/quantityLabel"
+        android:text="Type"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/_12ssp"
+        android:visibility="visible" />
 
-        <EditText
-            android:id="@+id/dialogEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_4sdp"
-            android:layout_toStartOf="@+id/btnFind"
-            android:hint="@string/enter_value_here"
-            android:imeOptions="actionDone"
-            android:inputType="text"
-            android:maxLength="50"
-            android:maxLines="1"
-            android:textSize="@dimen/_16ssp" />
+    <TextView
+        android:id="@+id/ownerLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_below="@+id/typeLabel"
+        android:layout_toStartOf="@+id/quantityLabel"
+        android:text="Owner"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/_12ssp"
+        android:visibility="visible" />
 
-        <ImageView
-            android:id="@+id/btnFind"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="@dimen/_4sdp"
-            android:src="@drawable/search_graph_blue"
-            android:visibility="gone" />
+    <TextView
+        android:id="@+id/brokerLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_below="@+id/ownerLabel"
+        android:layout_toStartOf="@+id/quantityLabel"
+        android:text="Broker"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/_12ssp"
+        android:visibility="visible" />
 
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/startPriceLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_below="@+id/brokerLabel"
+        android:layout_toStartOf="@+id/quantityLabel"
+        android:text="Broker"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/_12ssp"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/endPriceLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_below="@+id/startPriceLabel"
+        android:layout_toStartOf="@+id/quantityLabel"
+        android:text="Broker"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/_12ssp"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/quantityLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_below="@+id/endPriceLabel"
+        android:layout_toStartOf="@+id/quantityLabel"
+        android:text="Broker"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/_12ssp"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/commissionLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_below="@+id/quantityLabel"
+        android:layout_toStartOf="@+id/quantityLabel"
+        android:text="Broker"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/_12ssp"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/dateLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_below="@+id/commissionLabel"
+        android:layout_toStartOf="@+id/quantityLabel"
+        android:text="Broker"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/_12ssp"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/startTotalLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_below="@+id/dateLabel"
+        android:layout_toStartOf="@+id/quantityLabel"
+        android:text="Broker"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/_12ssp"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/endTotalLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_below="@+id/dateLabel"
+        android:layout_toStartOf="@+id/quantityLabel"
+        android:text="Broker"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/_12ssp"
+        android:visibility="visible" />
 
     <LinearLayout
+        android:id="@+id/dialogButtons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         android:gravity="center_horizontal"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <Button
-            android:id="@+id/btnCancel"
-            style="@style/ButtonStyle"
-            android:layout_width="@dimen/_120sdp"
+            android:id="@+id/btnDelete"
+            style="@style/ButtonStyleRed"
+            android:layout_width="@dimen/_36sdp"
             android:layout_height="@dimen/_36sdp"
             android:gravity="center"
             android:maxLines="1"
-            android:text="@string/cancel"
+            android:text="@string/delete"
             android:textSize="@dimen/_14ssp" />
 
         <Button
-            android:id="@+id/btnSet"
+            android:id="@+id/btnClose"
             style="@style/ButtonStyle"
             android:layout_width="@dimen/_120sdp"
             android:layout_height="@dimen/_36sdp"
             android:layout_marginStart="@dimen/_10sdp"
             android:gravity="center"
             android:maxLines="1"
-            android:text="@string/set"
+            android:text="@string/close"
+            android:textSize="@dimen/_14ssp" />
+
+        <Button
+            android:id="@+id/btnUpdate"
+            style="@style/ButtonStyle"
+            android:layout_width="@dimen/_120sdp"
+            android:layout_height="@dimen/_36sdp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text="@string/update"
             android:textSize="@dimen/_14ssp" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
