--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,14 @@
         <item name="android:textAllCaps">true</item>
     </style>
 
+    <style name="ButtonStyleRed">
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:background">@drawable/button_background_red</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
     <style name="ButtonStyleWhite">
         <item name="android:paddingLeft">16dp</item>
         <item name="android:paddingRight">16dp</item>
