--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/running_man">
 
     <TextView
-        android:id="@+id/labelText"
+        android:id="@+id/sumLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
